2007-02-06  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c (MODULE_VERSION): Bump to '2007.02.06'.

2007-02-06  Guillem Jover  <guillem@hadrons.org>

	Fix warnings when not checking pci_register_driver return codes.

	* 3dfx_driver.c (findCards): Return int instead of void, and normalize
	error code to be always negative, otherwise return numCards.
	(init_module): Check for findCards return code, print a warning and
	exit the module on error.
	(init_3dfx): Likewise.

2007-02-06  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c (HAVE_DEVFS): Define to 1 if
	LINUX_VERSION_CODE >= 2.3.46 and LINUX_VERSION_CODE <= 2.6.17 or
	if DEVFS_SUPPORT is defined, define to 0 otherwise.
	(devfs_handle): Only use if HAVE_DEVFS.
	(init_module): Only use devfs_mk_cdev or devfs_register if HAVE_DEVFS.
	(cleanup_module): Only use devfs_remove or devfs_unregister if
	HAVE_DEVFS.

2007-02-06  Guillem Jover  <guillem@hadrons.org>

	* Makefile (CFLAGS): Use '-march' instead of the deprecated '-mcpu'.

2007-02-06  Guillem Jover  <guillem@hadrons.org>

	* kinfo.c: Removed.
	* kver.c: New file.
	* Makefile: Include kver.mak.
	(KVERS): Move this variable to 'kver.mak', which is a generated file.
	(VERSION_HEADER): New variable to cope with UTS_RELEASE being moved
	from 'linux/version.h' to 'linux/utsrelease.h' in 2.6.18.
	(kver, kver.mak): New targets.
	(KBUILD): New variable.
	(KVER_MAJOR, KVER_MINOR, BUILD_TYPE, MODULE_TDFX): Likewise, moved
	from the generated file 'config'.
	(config, kinfo, kinfo.h): Remove targets.
	(modules, intstall, clean): Do not depend on config target.
	(modules, intstall): Depend on sanity target .

2007-02-06  Guillem Jover  <guillem@hadrons.org>

	* Makefile (.PHONY): Add clean_kbuild. Rename modules-legacy,
	modules-kbuild, install-legacy, install-kbuild and clean-legacy to
	modules_legacy, modules_kbuild, install_legacy, install_kbuild
	and clean_legacy.

2007-01-31  Guillem Jover  <guillem@hadrons.org>
